--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,16 @@
 #__next {
   height: 100vh;
 }
+
 body {
   padding: 0;
   margin: 0;
   min-height: 100%;
+}
+
+.section {
+  padding-top: 24px;
+  height: 100vh;
+  scroll-margin-top: 64px;
+  scroll-behavior: smooth;
 }
