--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,10 @@ body {
   padding-top: 24px;
   min-height: 90vh;
   scroll-margin-top: 64px;
-  scroll-behavior: smooth;
-  position: relative;
+}
+.mainSection {
+  width: 100%;
+  padding-top: 24px;
+  min-height: 50vh;
+  scroll-margin-top: 64px;
 }
