--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,6 @@ body {
 }
 .mainSection {
   width: 100%;
-  padding-top: 24px;
-  min-height: 50vh;
-  scroll-margin-top: 64px;
+  min-height: fit-content;
+  border-radius: 0px 0px 10px 10px;
 }
