--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,12 +10,10 @@ body {
 
 .section {
   width: 100%;
-  padding-top: 24px;
-  min-height: 90vh;
+  padding: 24px 0;
   scroll-margin-top: 64px;
 }
 .mainSection {
   width: 100%;
-  min-height: fit-content;
   border-radius: 0px 0px 10px 10px;
 }
